# Kisak-Strike

./: .gitignore  CMakeLists.txt  KISAK_PS3_UI_CROSSREFERENCE.md  KISAK_PS4_MULTIPLAYER_PLAN.md  KISAK_PS4_PORT.md  KISAK_PS4_PORT_HISTORY.md  PS4_BOOTSTRAP.md  build-ps4-bootstrap.sh  build-ps4-monolithic-linux.sh  build-ps4-monolithic.sh  build-ps4-shaders.sh  package-ps4-bootstrap-linux.sh  package-ps4-bootstrap.sh  stage-ps4-bootstrap.sh
appframework/: AppSystemGroup.cpp  CMakeLists.txt  Ps4StaticModules.cpp  StaticModuleRegistry.cpp  posixapp.cpp
cmake/: detect_platform.cmake  isolate_static_archive_symbols.sh  platform_dirs.cmake  protobuf_builder.cmake  ps4_monolithic_retention.cmake  source_dll_posix_base.cmake  source_exe_base.cmake  verify_ps4_retained_symbols.cmake
cmake/toolchains/: OpenOrbis.cmake
common/vgui_surfacelib/: ps4font.h  vguifont.h
datacache/: CMakeLists.txt  mdlcache.cpp
dmxloader/: CMakeLists.txt
engine/: GameEventManager.cpp  baseserver.cpp  bugreporter.cpp  cdll_engine_int.cpp  cdll_engine_int.h  cl_demo.cpp  cl_main.cpp  cl_rcon.cpp  cmd.cpp  cmodel.cpp  common.cpp  disp.cpp  downloadthread.cpp  engine_inc.cmake  host.cpp  host_state.cpp  materialproxyfactory.cpp  matsys_interface.cpp  net_ws.cpp  net_ws_headers.h  netconsole.cpp  randomstream.cpp  staticpropmgr.cpp  sv_main.cpp  sv_main.h  sv_rcon.cpp  sys_dll.cpp  sys_dll2.cpp  sys_getmodes.cpp  sys_mainwind.cpp  traceinit.cpp  traceinit.h  vgui_baseui_interface.cpp  vgui_drawtreepanel.cpp  voiceserver_impl.cpp
filesystem/: CMakeLists.txt  QueuedLoader.cpp  basefilesystem.cpp  basefilesystemasync.cpp  filesystem_stdio.cpp
game/client/: CMakeLists.txt  c_baseentity.cpp  c_world.cpp  cdll_client_int.cpp  cdll_client_int.h  client_base.cmake  clientmode_shared.cpp  clientsteamcontext.cpp  hltvcamera.cpp  hud_locator_target.cpp  in_camera.cpp  in_mouse.cpp  in_steamcontroller.cpp  panelmetaclassmgr.cpp  particlemgr.cpp  render_to_rt_helper.cpp  steamworks_gamestats_client.cpp  steamworks_gamestats_client.h  view.h  viewdebug.cpp
game/server/: client.cpp  dedicated_server_ugc_manager.cpp  enginecallback.h  gameinterface.cpp  physics.cpp  player.cpp  player.h  player_command.cpp  server_base.cmake
game/shared/: GameEventListener.h  GameStats.cpp  achievementmgr.cpp  cam_thirdperson.cpp  ehandle.h  gc_clientsystem.cpp  igamesystem.cpp  multiplay_gamerules.cpp  particle_parse.cpp  physics_shared.cpp  steamworks_gamestats.cpp  steamworks_gamestats.h  ugc_utils.cpp
inputsystem/: CMakeLists.txt  inputstacksystem.cpp  inputsystem.cpp  inputsystem.h  inputsystem_ps4.cpp
interfaces/: interfaces.cpp
ivp/ivp_compact_builder/: CMakeLists.txt
ivp/ivp_physics/: CMakeLists.txt
ivp/ivp_utility/: ivu_float.hxx  ivu_types.hxx
launcher/: CMakeLists.txt  launcher.cpp  ps4_content_paths.cpp  ps4_content_paths.h
localize/: localize.cpp
matchmaking/: CMakeLists.txt  datacenter.cpp  main.cpp  mm_dlc.cpp  mm_events.cpp  mm_events.h  mm_framework.cpp  playermanager.cpp  ps4_matchmaking_factory.cpp
matchmaking/cstrike15/: mm_title.cpp  mm_title_gamesettingsmgr.cpp
materialsystem/: cmaterial.cpp  cmaterialsystem.cpp
materialsystem/ps4gnm/: CMakeLists.txt  ps4_gnm_buffer.cpp  ps4_gnm_buffer.h  ps4_gnm_constants.cpp  ps4_gnm_constants.h  ps4_gnm_device.cpp  ps4_gnm_device.h  ps4_gnm_draw_packet.cpp  ps4_gnm_draw_packet.h  ps4_gnm_draw_state.cpp  ps4_gnm_draw_state.h  ps4_gnm_memory.cpp  ps4_gnm_memory.h  ps4_gnm_runtime.cpp  ps4_gnm_runtime.h  ps4_gnm_shader.cpp  ps4_gnm_shader.h  ps4_gnm_shader_handles.cpp  ps4_gnm_shader_handles.h  ps4_gnm_texture.cpp  ps4_gnm_texture.h  ps4_gnm_vertex_declaration.cpp  ps4_gnm_vertex_declaration.h  ps4_shader_manifest.cpp  ps4_shader_manifest.h  ps4_shadow_state_translate.cpp  ps4_shadow_state_translate.h  ps4_source_buffers.cpp  ps4_source_buffers.h  shaderapips4.cpp  shaderapips4.h
materialsystem/shaderapiempty/: shaderapiempty.cpp
mathlib/: CMakeLists.txt  sse.cpp
particles/: CMakeLists.txt  particles.cpp
ps4/: CMakeLists.txt  bootstrap_main.c  engine_bootstrap.cpp  gameui_desktop_stubs.cpp  gnm_submission_bootstrap.cpp  kisak_debug.py  offline_launch_request.cpp  offline_launch_request.h  prepare_scaleform_swf.py  rocketui_bootstrap.cpp  scaleform_asset_path.cpp  scaleform_asset_path.h  scaleform_gfx_manager.cpp  scaleform_gfx_manager.h  scaleform_gnm_hal.cpp  scaleform_gnm_hal.h  scaleform_menu_actions.h  scaleform_orbis_config.h  scaleform_sdk_probe.cpp  scaleformui_bootstrap.cpp  steam_api_stubs.cpp  test_kisak_debug.py  videoout_bootstrap.cpp
ps4/content/: kisak_ps4_content_probe.txt
ps4/shaders/: kisak_diagnostic.frag.glsl  kisak_diagnostic.manifest  kisak_diagnostic.vert.glsl  kisak_scaleform_ordered.frag.glsl  kisak_scaleform_ordered.frag.sb  kisak_scaleform_ordered.frag.spv  kisak_scaleform_ordered.vert.glsl  kisak_scaleform_ordered.vert.sb  kisak_scaleform_ordered.vert.spv
public/: datamap.h  dxabstract_console_format.h  filesystem_init.cpp
public/appframework/: IAppSystemGroup.h  (+2 more)
raytrace/: trace2.cpp
scenefilecache/: SceneFileCache.cpp
soundemittersystem/: soundemittersystembase.cpp
studiorender/: CMakeLists.txt  studiorendercontext.cpp
tests/: CMakeLists.txt  ps4_content_paths_test.cpp  ps4_gnm_buffer_test.cpp  ps4_gnm_constants_test.cpp  ps4_gnm_device_test.cpp  ps4_gnm_shader_handles_test.cpp  ps4_gnm_vertex_declaration_test.cpp  ps4_offline_launch_request_test.cpp  ps4_scaleform_asset_path_test.cpp  ps4_scaleform_hal_test.cpp  ps4_scaleform_menu_actions_test.cpp  ps4_shader_manifest_test.cpp  ps4_shadow_state_translate_test.cpp  ps4_static_modules_test.cpp  static_module_registry_test.cpp
tier0/: CMakeLists.txt  threadtools.cpp  tslist_orbis.cpp
tier1/: CMakeLists.txt  convar.cpp  exprevaluator.cpp  fileio.cpp  keyvalues.cpp  strtools.cpp
tier2/: socketcreator.cpp
vguimatsurface/: Cursor.cpp  MatSystemSurface.cpp
vphysics/: CMakeLists.txt  main.cpp
vpklib/: packedstore.cpp
vscript/: CMakeLists.txt  vscript.cpp
vstdlib/: cvar.cpp  jobthread.cpp  keyvaluessystem.cpp
vtf/: CMakeLists.txt
(+93 files in other folders)
